# Leviathan

./: -mnt-Capablanca-Morphy-extracted_articles-TCP-IP protocol suite in Ubuntu-md  .gitignore  .leviathan_log.txt  .leviathan_message_store.pickle  .log.txt  .tutorialize_log.txt  GSR_2024.txt  Leviathan.py  NetworkManager.md  Save_to_obsidian.py  Tutorialize.py  __init__.py  article.txt  bash_flashcards.csv  cod_summary.txt  comptia.txt  coursera_report.py  create_tutorial.py  download_youtube_transcript.py  error.txt  evaluation_transcript.py  evaluation_transcript.txt  flashcards.py  gpg.md  graphrag.py  instructor.txt  main.py  nlp.py  obsidian.py  pcis.md  pdf.py  print_markdown.py  pyproject.toml  question.md  rag_tutorials.py  requirements.txt  setup.py  sockets.md  summarize_long_text.py  text_summarization.py  (+3 more)
Book/: Book.py  Book_summarize.py  Get_Book.py
Leviathan.egg-info/: PKG-INFO  SOURCES.txt
book/: Book.py  Get_Book.py  readme.md
cookbook/: cookbook.py
docs/: docs.py  old_doc_string.py
leviathan/: Leviathan.py  __init__.py  download_youtube_transcript.py  leviathan.py
misc/: coursera_report.py  evaluation_transcript.py  flashcards.py  nlp.py  rag_tutorials.py  stuff.py
module/: .module.db  module.py  notes.md  prompt.jinja2
save_to_obsidian/: save_to_obsidian.py
summarize/: CoD.py  Full_context.py  Long_summarize.py  Medium_summarize.py  Summarize.py  Vectorize_text.py  WEF.md  answer_list.py  pickle_prompt.jinja2  readme.md  summarize_long_text.py  summarize_medium_text.py  summarize_short_text.py
tests/: NLTK.md  (+1 more)
whisper/: whisper.py  (+1 more)
(+11 files in other folders)
